--- a/sakigake-informational/src/Components/Navbar/style.css
+++ b/sakigake-informational/src/Components/Navbar/style.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&family=Hind+Madurai&family=Jost&family=Nunito:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap');
 .Navbar {
-  margin-top: 2em;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
   height: 60px;
   display: flex;
   justify-content: space-between;
@@ -24,7 +25,7 @@
   font-weight: 400;
   color: #484848;
   font-family: 'Amiko', sans-serif;
-  font-size: 1.05em;
+  font-size: 1.25em;
   text-decoration: none;
   margin: 35px 1.4em;
   position: relative;
@@ -70,7 +71,7 @@
     background: #008CBF;
     left: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
     transform: translateX(-100%);
   
   }
@@ -139,3 +140,43 @@
     margin-right: 1em;
   }
 }
+
+@media (min-width: 769px) and (max-width: 820px) {
+  .Navbar > .nav-items > a {
+    font-size: 20px; 
+    margin: 8px; 
+    padding: 8px; 
+  }
+}
+
+@media (min-width: 912px) and (max-width: 1368px) {
+  .Navbar > .nav-items > a {
+    font-size: 30px; 
+    margin: 8px; 
+    padding: 8px; 
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .Navbar > .nav-items > a {
+
+    font-size: 18px; 
+    margin: 8px; 
+    padding: 8px; 
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
