--- a/sakigake-informational/src/components/ProductDownload/style.css
+++ b/sakigake-informational/src/components/ProductDownload/style.css
@@ -15,40 +15,44 @@ font-size:30px;
 .playstore{
     width: 200px;
     height: 70px;
+    padding-bottom: 25px;
 }
 .blue{
     color: rgb(0, 170, 255);
 }
-.pic {
+.phoneDisplay {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-grow: 1;
   }
-  .pic img {
+  .phoneDisplay img {
     padding-top: 8%;
     max-width: 100%;
     height: auto;
   }
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
     .main {
       flex-direction: column;
       align-items: center;
-      font-size: 20px;
+      font-size: 24px;
     }
     .blue{
-      font-size: 20px;
+      font-size: 24px;
     }
     .words {
       margin: 50px 0;
       text-align: center;
     }
     .playstore {
-      width: 100px;
+      width: 120px;
       height: 50px;
       object-fit: contain;
+
     }
     .pic {
         margin: 20px 0;
       }
   }
+
+  
