--- a/sakigake-informational/src/components/Welcome/style.css
+++ b/sakigake-informational/src/components/Welcome/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&family=Hind+Madurai&family=Jost&family=Nunito:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500;600;700;800&display=swap');
 
-.Home{
+.home{
     background-image:
     linear-gradient(rgba(255, 255, 255, 0.700), rgba(255, 255, 255, 0.700)),
     url('/public/images/background.jpg');
@@ -10,26 +10,26 @@
     background-size: cover;
     padding: 5em 0;
 }
-.home-div{
+.home-divs{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     padding: 0 3em;
     padding-top: 3em;
 }
-.home-div h1{
+.home-divs h1{
     font-family: 'Baloo Bhai 2', cursive;
 }
-.h-div-1{
+.home-div-one{
     padding-left: 5%;
     margin-top: 6%;
 }
-.h-div-1 .welcome{
+.home-div-one .welcome{
     font-size: 50px;
     font-weight: bold;
     text-transform: capitalize;
     color: #484848;
 }
-.h-div-1 .journey{
+.home-div-one .journey{
     color: #008CBF;
     font-size: 50px;
     font-weight: bolder;
@@ -38,7 +38,7 @@
     text-transform: capitalize;
     margin-top: -.35em;
 }
-.home-div p{
+.home-divs p{
     font-size: 20px;
     font-family: Jost;
     color: #484848;
@@ -46,23 +46,23 @@
     padding-top: 1.8em;
     letter-spacing: .02em;
 }
-.img-div-1{
+.images-div-one{
     margin-top: -2em;
     margin-left: -.5em;
 }
-.img-div-1 img{
+.images-div-one img{
     width: 13em;
 }
-.h-div-2{
+.home-div-two{
     margin-top: 8%;
     text-align: center !important;
     justify-content: center !important;
 }
-.child-bg{
+.child-background{
     float: right;
     margin-right: 4em;
 }
-.child-bg{
+.child-background{
     position: relative;
     background-image:
     url('/public/images/bg2.svg');
@@ -72,19 +72,19 @@
     margin-top: -3.5em;
 }
 
-.yellow{
+.span-dot{
     background-color: #FFDB5B;
     padding: 1.2em 1.8em;
     border-radius: 2em;
     margin-left: 5em;
 }
 
-.blue{
+.span-dot-two{
     margin-left: 2em;
     float: right;
 }
 
-.blue::after{
+.span-dot-two::after{
     content: '';
     background: #72D4F7;
     display: block;
@@ -94,173 +94,173 @@
     border-radius: 100%;
 }
 @media only screen and (max-width:1629px){
-    .child-bg{
+    .child-background{
         height: 500px !important;
         width: 500px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 2.7em !important;
     }
-    .child-bg{
+    .child-background{
         margin-top: -2em;
     }
-    .child-bg{
+    .child-background{
         margin-right: 2em;
     }
 }
 
 @media only screen and (max-width:1597px){
-    .child-bg{
+    .child-background{
         height: 495px !important;
         width: 495px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 2.4em !important;
     }
-    .h-div-1 p{
+    .home-div-one p{
         font-size: 1.15em !important;
     }
 }
 
 
 @media only screen and (max-width:1429px){
-    .child-bg{
+    .child-background{
         height: 450px !important;
         width: 450px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 2.1em !important;
     }
 }
 
 @media only screen and (max-width:1262px){
-    .child-bg{
+    .child-background{
         height: 390px !important;
         width: 390px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 2em !important;
     }
-    .h-div-1 p{
+    .home-div-one p{
         font-size: 1.038em !important;
     }
 }
 @media only screen and (max-width:1250px){
-    .child-bg{
+    .child-background{
         height: 400px !important;
         width: 400px !important;
     }
-    .child-bg{
+    .child-background{
         margin-right: 0 !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 2.05em !important;
     }
 }
 @media only screen and (max-width:1207px){
-    .child-bg{
+    .child-background{
         height: 400px !important;
         width: 400px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.8em !important;
     }
 
-    .h-div-1{
+    .home-div-one{
         padding-left: 3%;
     }
 }
 @media only screen and (max-width:1110px){
-    .child-bg{
+    .child-background{
         height: 380px !important;
         width: 380px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.6em !important;
     }
 }
 @media only screen and (max-width:1000px){
-    .child-bg{
+    .child-background{
         height: 330px !important;
         width: 330px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.5em !important;
     }
 }
 @media only screen and (max-width:905px){
-    .child-bg{
+    .child-background{
         height: 280px !important;
         width: 280px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.2em !important;
     }
-    .home-div{
+    .home-divs{
         padding: 0 3em;
         padding-top: 4em;
         margin: 0;
     }
-    .h-div-1 p{
+    .home-div-one p{
         font-size: .9em !important;
     }
 }
 @media only screen and (max-width:700px){
-    .home-div{
+    .home-divs{
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
-    .child-bg{
+    .child-background{
         float: none !important;
     }
-    .home-div{
+    .home-divs{
         padding: 0 1.8em !important;
         padding-top: .1em !important;
         justify-content: center !important;
     }
-    .child-bg{
+    .child-background{
         height: 400px !important;
         width: 400px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.8em !important;
     }
 }
 @media only screen and (max-width:492px){
-    .child-bg{
+    .child-background{
         height: 350px !important;
         width: 350px !important;
         margin-left: 1.5em;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.5em !important;
     }
-    .img-div-1 img{
+    .images-div-one img{
         margin-top: 40px;
         width: 8em;
     }
-    .home-div{
+    .home-divs{
         margin-bottom: 10%;
         padding: 0 0.2em !important;
         margin-top: -5%;
     }
-    .home-div p{
+    .home-divs p{
         font-size: 1em !important;
     }
 }
 @media only screen and (max-width:327px){
-    .child-bg{
+    .child-background{
         height: 250px !important;
         width: 250px !important;
     }
-    .h-div-1 h1{
+    .home-div-one h1{
         font-size: 1.3em !important;
     }
-    .home-div{
+    .home-divs{
         padding: 0 3em !important;
         padding-top: 3em !important;
     }
-    .home-div p{
+    .home-divs p{
         font-size: .8em !important;
     }
 }
