--- a/sakigake-informational/src/Mission/styles.css
+++ b/sakigake-informational/src/Mission/styles.css
@@ -82,8 +82,7 @@
 }
 @media screen and (max-width: 280px){
     #mission-section {
-        width: 90%;
-        padding-right: 20px;
+        width: 100%;
     }
 
     #mission-header {
@@ -104,8 +103,9 @@
 
     #blueContainer {
         width: 80%;
-        padding: 6px 14px;
-        padding-top: 2%;
+        margin-right: 10%;
+        /* padding: 6px 14px;
+        padding-top: 2%; */
          
     }
     #blueContainer h2 {
