--- a/sakigake-informational/src/components/WhyUs/style.css
+++ b/sakigake-informational/src/components/WhyUs/style.css
@@ -46,8 +46,8 @@
     text-transform: uppercase;
     margin-bottom: 5em;
     font-size: 55px;
-   }
-   .main-heading::after{
+}
+.main-heading::after{
     content: '';
     background: #008CBF;
     display: block;
@@ -55,7 +55,7 @@
     width: 4.5em;
     margin: 15px auto 8px;
     border-radius: 2px;
-   }
+}
 .headings{
     font-size: 40px;
     font-weight: 600;
@@ -77,15 +77,28 @@
     .section-header .main-heading{
         font-size: 30px;
         font-weight: 300px;
+        
     }
     .contents{
         display: grid;
+        /* align-items: center; */
+        /* text-align: center; */
         grid-template-columns: repeat(1,1fr);
+        margin-top: -3em;
     }
+    .contents-paragraph .headings{
+        /* text-align: center; */
+        font-size: 20px;
+    }
+    .contents-paragraph1 .headings{
+        
+        margin-left: 4-em;
+        font-size: 20px;
+    }
+
     .image-container img{
         width: 320px;
         height: 320px;
-        margin-left: 10%;
     }
     .content-container h2 {
         font-size:25px;
@@ -97,6 +110,7 @@
         font-size: 18px;
         text-align: start;
         margin-left: 10%;
+        /* text-align: center; */
     }
     br{
         display: none;
