--- a/sakigake-informational/src/Mission/styles.css
+++ b/sakigake-informational/src/Mission/styles.css
@@ -80,13 +80,15 @@
     border: 1px solid white;
     transform: translate(-40%, -105%);
 }
-@media screen and (max-width: 280px){
+@media screen and (max-width: 281px){
     #mission-section {
-        width: 100%;
+       /* padding: 10px auto;
+       padding-right: 10px; */
+       
     }
 
     #mission-header {
-        width: 90%;
+    
     }
     #mission-header h1 {
         font-size: 14px;
@@ -98,17 +100,16 @@
     #content{
         display: grid;
         grid-template-columns: repeat(1 1fr);
-       
     }
 
     #blueContainer {
-        width: 80%;
-        margin-right: 10%;
+        width: 50px;
+        height: 50px;
         
-         
+    
     }
     #blueContainer h2 {
-        font-size: 20px;
+        font-size: 14px;
        
     }
     #blueContainer p{
@@ -116,18 +117,18 @@
     }
 
     #icon {
-        font-size: 20px;
-        padding: 15px 30px;
+        font-size: 8px;
+        /* padding: 10px 20px; */
     }
 
     #circle {
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
     }
 
     #circle2 {
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
     }
 }
 @media screen and (min-width: 420px) and (max-width: 540px){
