--- a/sakigake-informational/src/components/Welcome/style.css
+++ b/sakigake-informational/src/components/Welcome/style.css
@@ -210,6 +210,9 @@
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
+    .home-div-one .welcome, .journey, .our-app{
+        padding-left: 0.5em;
+    }
     .child-background{
         float: none !important;
     }
