--- a/sakigake-informational/src/components/WhyUs/style.css
+++ b/sakigake-informational/src/components/WhyUs/style.css
@@ -77,17 +77,13 @@
     .section-header .main-heading{
         font-size: 30px;
         font-weight: 300px;
-        
     }
     .contents{
         display: grid;
-        /* align-items: center; */
-        /* text-align: center; */
         grid-template-columns: repeat(1,1fr);
         margin-top: -3em;
     }
     .contents-paragraph .headings{
-        /* text-align: center; */
         font-size: 20px;
     }
     .contents-paragraph1 .headings{
@@ -95,10 +91,15 @@
         margin-left: 4-em;
         font-size: 20px;
     }
-
+    .contents-paragraph1{
+        padding-top: 2em;
+    }
     .image-container img{
         width: 320px;
         height: 320px;
+        align-items: center;
+        margin-left: 3em;
+        padding-top: 4em;
     }
     .content-container h2 {
         font-size:25px;
@@ -110,7 +111,48 @@
         font-size: 18px;
         text-align: start;
         margin-left: 10%;
-        /* text-align: center; */
+    }
+    br{
+        display: none;
+    }
+}
+ 
+@media only screen and (max-width:1429px){
+    .section-header .main-heading{
+        font-size: 30px;
+        font-weight: 300px;
+    }
+    .contents{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .contents-paragraph .headings{
+        font-size: 20px;
+    }
+    .contents-paragraph1 .headings{
+        
+        margin-left: 4-em;
+        font-size: 20px;
+    }
+    .contents-paragraph1{
+        padding-top: 2em;
+    }
+    .image-container img{
+        width: 320px;
+        height: 320px;
+        align-items: center;
+        margin-left: 1.5em;
+        padding-top: 4em;
+    }
+    .content-container h2 {
+        font-size:25px;
+        text-align: start;
+        margin-left: 10%;
+        padding: 0;
+    }
+    .content-container p{
+        font-size: 18px;
+        text-align: start;
+        margin-left: 10%;
     }
     br{
         display: none;
