--- a/sakigake-informational/src/components/ProductDownload/style.css
+++ b/sakigake-informational/src/components/ProductDownload/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&family=Hind+Madurai&family=Jost&family=Nunito:wght@300;400&display=swap');
-
 .main{
 background-color: #E7F5FF;
 display: flex;
@@ -7,15 +6,15 @@ font-size:30px;
 }
 .main p{
   font-family: 'Baloo Bhai 2', cursive;
+  padding-top: 3em;
 }
 .words{
     margin-left: 100px;
     margin-top: 100px;
 }
 .playstore{
-    width: 200px;
-    height: 70px;
-    padding-bottom: 25px;
+ width: 7.5em;
+padding-bottom: 25px;
 }
 .blue{
     color: rgb(0, 170, 255);
@@ -48,11 +47,8 @@ font-size:30px;
       width: 120px;
       height: 50px;
       object-fit: contain;
-
     }
     .pic {
         margin: 20px 0;
       }
   }
-
-  
