Fixed the dots sizes on mobile screens

--- a/sakigake-informational/src/components/Mission/styles.css
+++ b/sakigake-informational/src/components/Mission/styles.css
@@ -49,6 +49,8 @@
 #blueContainer p {
     font-family:'Jost',san ;
     line-height: 1.8;
+    color: #484848;
+    padding-bottom: 3em;
 }
 
 #icon {
